// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders a plaintext text block 1`] = `
<div
  className="css-sa3tol-TextElement"
>
  <div
    className="css-795pei-TextElement"
  >
    <span
      className="css-1kxrhf3"
      onClick={[Function]}
    >
      Hello World!
    </span>
  </div>
</div>
`;

exports[`Text renders a text block with custom styles 1`] = `
<div
  className="css-sa3tol-TextElement"
>
  <div
    className="css-795pei-TextElement"
  >
    <span
      className="css-1kxrhf3"
      onClick={[Function]}
    >
      Hello World!
    </span>
  </div>
</div>
`;

exports[`Text renders an empty text block 1`] = `
<div
  className="css-sa3tol-TextElement"
>
  <div
    className="css-795pei-TextElement"
  >
    <span
      className="css-1kxrhf3"
      onClick={[Function]}
    >
      

    </span>
  </div>
</div>
`;
